# IDATT2503-Sikkerheit

4_2_C/: main.c
4_2_Cpp/: main.cpp
Asmnt10/: Krypto4oppg1.py  Krypto4oppg3.py  Krypto4oppg4Shank.py  Krypto4oppg5.py
Asmnt4/: 4_1_assembly
Asmnt4/4_2_C/: CMakeLists.txt
Asmnt4/4_2_Cpp/: CMakeLists.txt
Asmnt4/rust_4_2/: Cargo.toml
Asmnt5/: .gitlab-ci.yml  CMakeLists.txt  README.md  main.c  utility.h
Asmnt5/tests/: CMakeLists.txt  encode_fuzzer_test.c
Asmnt6/: 1.cpp  2.py  CMakeLists.txt
Asmnt6/templates/: index.html
Asmnt7/: Krypto1Oppg2.py  Krypto1oppg3.py  Krypto1oppg4.py  Krypto1oppg5.py
Asmnt8/: Krypto2AES.py  Krypto2oppg2.py  Krypto2oppg3.py
Asmnt9/: Krypto3RSA_4.py  Krypto3oppg1.py  Krypto3oppg2.py  Krypto3oppg3.py  Krypto3oppg5.py  Krypto3oppg7.py
rust_4_2/src/: main.rs
